--- a/Lab2/pzpi-22-2-moskovchenko-yevhenii-task2/docker-compose.yml
+++ b/Lab2/pzpi-22-2-moskovchenko-yevhenii-task2/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+       - backup_data:/backups
 
   backend:
     build:
@@ -24,6 +25,9 @@ services:
       ASPNETCORE_ENVIRONMENT: Development
     depends_on:
       - db
+    volumes:
+      - backup_data:/backups 
 
 volumes:
   db_data:
+  backup_data: 
